--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "Gruntfile.js"
   ],
   "dependencies": {
-    "lodash": "^3.5.0"
+    "lodash": "^3.5.0",
+    "deepExtend": "https://github.com/borovin/deepExtend.git#~1.1.2"
   }
 }
