update npm deps version

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.1",
     "karma-systemjs": "^0.5.0",
-    "phantomjs-polyfill": "0.0.1",
+    "phantomjs-polyfill": "^0.0.1",
     "systemjs": "^0.18.3"
   }
 }
