--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 
 dependencies:
   post:
-    - npm install karma-junit-reporter codacy-coverage
+    - npm install karma-junit-reporter
 
 test:
   override:
