--- a/bower.json
+++ b/bower.json
@@ -1,30 +1,26 @@
 {
   "name": "set",
-  "main": "set.js",
+  "main": "index.js",
   "version": "0.0.1",
   "description": "Function for smart set object properties",
   "authors": [
     "a@borovin.com"
   ],
   "moduleType": [
-    "amd"
+    "node"
   ],
   "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
-    "tools",
-    "test",
-    "tests",
-    "coverage",
-    "index.html",
-    "require.config.js",
+
+    "*.spec.js",
     "package.json",
-    "Gruntfile.js"
+    "karma.conf.js"
   ],
   "dependencies": {
     "lodash": "^3.5.0",
-    "deepExtend": "https://github.com/borovin/deepExtend.git#^1.1.2"
+    "deepExtend": "borovin/deepExtend#^1.2.0"
   }
 }
