--- a/package.json
+++ b/package.json
@@ -7,22 +7,26 @@
   },
   "homepage": "https://github.com/borovin/set",
   "scripts": {
-    "test": "node ./node_modules/karma/bin/karma start --single-run",
-    "postinstall": "node ./node_modules/bower/bin/bower install"
+    "test": "node ./node_modules/karma/bin/karma start --single-run"
   },
   "author": "a@borovin.com",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.3.12",
-    "es6-module-loader": "^0.17.3",
-    "grunt": "^0.4.5",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.37",
     "karma-jasmine": "^0.3.5",
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.1",
-    "karma-systemjs": "^0.5.0",
-    "phantomjs-polyfill": "^0.0.1",
-    "systemjs": "^0.18.3"
+    "phantomjs-polyfill": "^0.0.1"
+  },
+  "dependencies": {
+    "lodash": "^4.0.0",
+    "steal": "^0.13.2"
+  },
+  "system": {
+    "npmIgnore": [
+      "devDependencies"
+    ],
+    "npmAlgorithm": "flat"
   }
 }
