--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "name": "set",
+  "main": "index.js",
   "description": "Function for smart set object properties",
   "repository": {
     "type": "git",
