--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "name": "set",
   "main": "index.js",
   "description": "Function for smart set object properties",
@@ -8,11 +8,11 @@
     "url": "https://github.com/borovin/set.git"
   },
   "homepage": "https://github.com/borovin/set",
+
   "scripts": {
-    "test": "node ./node_modules/karma/bin/karma start --single-run && node ./node_modules/eslint/bin/eslint.js tests/*.js index.js "
+    "test": "node ./node_modules/karma/bin/karma start --single-run && npm run lint",
+    "lint": "node ./node_modules/eslint/bin/eslint.js tests/*.js index.js"
   },
-  "author": "a@borovin.com",
-  "license": "MIT",
   "devDependencies": {
     "eslint": "^1.10.3",
     "eslint-config-yandex": "^1.0.5",
@@ -32,5 +32,7 @@
       "devDependencies"
     ],
     "npmAlgorithm": "flat"
-  }
+  },
+  "author": "a@borovin.com",
+  "license": "MIT"
 }
