--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.1",
+  "version": "1.0.2",
   "name": "set",
   "main": "index.js",
   "description": "Function for smart set object properties",
@@ -10,7 +10,7 @@
   "homepage": "https://github.com/borovin/set",
 
   "scripts": {
-    "test": "node ./node_modules/karma/bin/karma start --single-run && npm run lint",
+    "test": "node ./node_modules/karma/bin/karma start --single-run && npm run lint -s",
     "lint": "node ./node_modules/eslint/bin/eslint.js tests/*.js index.js"
   },
   "devDependencies": {
