--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "homepage": "https://github.com/borovin/set",
 
   "scripts": {
-    "test": "node ./node_modules/karma/bin/karma start --single-run && npm run lint -s",
-    "lint": "node ./node_modules/eslint/bin/eslint.js tests/*.js index.js"
+    "test": "npm run karma -s && npm run lint -s",
+    "karma": "node ./node_modules/karma/bin/karma start --single-run",
+    "lint": "node ./node_modules/eslint/bin/eslint.js ."
   },
   "devDependencies": {
     "eslint": "^1.10.3",
