--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-  "extends": ["eslint:recommended", "yandex"],
+  "extends": [
+    "eslint:recommended",
+    "yandex"
+  ],
   "env": {
     "commonjs": true,
     "browser": true,
