--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "node ./node_modules/testem/testem.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js ."
   },
