move playground to dev deps

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "eslint": "^1.10.3",
     "eslint-config-yandex": "^1.0.5",
     "express": "^4.13.4",
-    "testem": "^1.2.2"
+    "testem": "^1.2.2",
+    "playground": "github:borovin/playground"
   },
   "dependencies": {
-    "playground": "github:borovin/playground",
     "steal": "^0.13.2"
   },
   "system": {
