--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "node ./node_modules/testem/testem.js",
+    "test": "node ./node_modules/testem/testem.js ci",
+    "testem": "node ./node_modules/testem/testem.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js ."
   },
   "devDependencies": {
