replace yandex eslint with airbnb

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "node ./node_modules/testem/testem.js ci",
+    "test": "npm run testem-ci && npm run lint -s",
     "testem": "node ./node_modules/testem/testem.js",
-    "lint": "node ./node_modules/eslint/bin/eslint.js ."
+    "testem-ci": "node ./node_modules/testem/testem.js ci",
+    "lint": "node ./node_modules/eslint/bin/eslint.js . --fix"
   },
   "devDependencies": {
     "eslint": "^2.0.0",
-    "eslint-config-yandex": "^1.0.5",
+    "eslint-config-airbnb": "^6.0.2",
     "express": "^4.13.4",
     "testem": "^1.2.2",
     "playground": "github:borovin/playground"
