--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,8 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "yandex"
-  ],
+  "extends": "airbnb/legacy",
+  "rules": {
+    "func-names": 0
+  },
   "env": {
     "node": true,
     "commonjs": true,
