--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+script:
+  - testem ci --skip chromium-browser
+  - npm run lint -s
