--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "playground": "github:borovin/playground"
   },
   "dependencies": {
-    "steal": "^0.15.0",
-    "lodash": "^4.0.0"
+    "lodash": "^4.0.0",
+    "lodash-es": "^4.6.1",
+    "steal": "^0.15.0"
   },
   "system": {
     "npmIgnore": [
