--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   "devDependencies": {
     "eslint": "^2.0.0",
     "eslint-config-airbnb": "^6.0.2",
-    "express": "^4.13.4",
-    "testem": "^1.2.2",
-    "playground": "github:borovin/playground"
+    "testem": "^1.2.2"
   },
   "dependencies": {
     "lodash-es": "^4.6.1",
