--- a/package.json
+++ b/package.json
@@ -9,27 +9,24 @@
   },
   "homepage": "https://github.com/borovin/set",
   "scripts": {
-    "start": "node app.js",
-    "test": "npm run testem-ci && npm run lint -s",
-    "testem": "node ./node_modules/testem/testem.js",
-    "testem-ci": "node ./node_modules/testem/testem.js ci -P 5",
-    "lint": "node ./node_modules/eslint/bin/eslint.js ."
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:codestyle": "eslint ."
   },
   "devDependencies": {
-    "eslint": "^2.0.0",
-    "eslint-config-airbnb": "^6.0.2",
-    "testem": "^1.2.2"
-  },
-  "dependencies": {
-    "lodash-es": "^4.6.1",
-    "steal": "^0.15.0"
-  },
-  "system": {
-    "npmIgnore": [
-      "devDependencies"
-    ],
-    "npmAlgorithm": "flat"
+    "babel-jest": "^16.0.0",
+    "babel-preset-es2015": "^6.16.0",
+    "eslint": "^3.8.1",
+    "jest": "^16.0.2"
   },
   "author": "a@borovin.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@basket/get": "^1.2.4",
+    "lodash.clonedeep": "latest",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.mergewith": "^4.6.0",
+    "lodash.set": "^4.3.2",
+    "lodash.isarray": "latest"
+  }
 }
