--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,12 @@
 {
-  "extends": "airbnb/base",
+  "parserOptions": {
+    "ecmaVersion": 6
+  },
+  "extends": "eslint:recommended",
   "env": {
     "node": true,
     "commonjs": true,
     "browser": true,
-    "jasmine": true
+    "jest": true
   }
 }
