--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,29 @@
 language: node_js
-node_js:
-  - "5"
-sudo: false
 cache:
   directories:
     - node_modules
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+node_js:
+  - "6"
+sudo: false
+env:
+  - TEST_TYPE=coverage CACHE_NAME=JOB1
+  - TEST_TYPE=codestyle CACHE_NAME=JOB1
 script:
-  - testem launchers
-  - testem ci --skip PhantomJS,Chromium
-  - npm run lint -s
+  - npm run test:$TEST_TYPE -s
+after_script:
+  - |
+      if [ "$TEST_TYPE" == coverage ]; then
+        bash <(curl -s https://codecov.io/bash)
+      fi
+branches:
+  only:
+  - master
+  - dev
+deploy:
+  provider: npm
+  api_key: $NPM_AUTH_TOKEN
+  email: "npmbasket@gmail.com"
+  skip_cleanup: true
+  tags: true
+  on:
+      branch: master
