--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "license": "MIT",
   "dependencies": {
     "@basket/get": "^1.2.4",
-    "lodash.clonedeep": "latest",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isarray": "^4.0.0",
     "lodash.isplainobject": "^4.0.6",
     "lodash.mergewith": "^4.6.0",
-    "lodash.set": "^4.3.2",
-    "lodash.isarray": "latest"
+    "lodash.set": "^4.3.2"
   },
   "jest": {
     "collectCoverageFrom": [
